# rpi-center-fa

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.rst  docker-compose.yaml  main.py  pyproject.toml
api/: __init__.py  db_handler.py  models.py
esp32/: CMakeLists.txt  Makefile  example_test.py  sdkconfig
esp32/main/: AM2301.c  CMakeLists.txt  main.c  requests.c
esp32/main/include/: AM2301.h  requests.h
templates/: temperature.html
tests/: test_api.py
