[tool.poetry]
name = "rpi-center-fa"
version = "0.1.5"
description = "This project shows how to set a API for domotic systems with FastAPI"
authors = ["Alejandro Antunes <antusystem@vivaldi.net>"]
license = "Apache License 2.0"
readme = "README.rst"
repository = ""
documentation = ""
keywords = ["iot", "fastapi",  "ESP32", "IoT"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
psycopg = {extras = ["binary", "pool"], version = "^3.0.15"}
python-dotenv = "^0.20.0"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
bandit = "^1.7.2"
pylama = {extras = ["all"], version = "^8.3.7"}
flake8-black = "^0.3.3"
flake8-bugbear = "^22.6.22"
flake8-import-order = "^0.18.1"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
my_script = 'my_script.:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
